# gvideo

./: Makefile.am  Makefile.in  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool
common/: Makefile.am  Makefile.in  gvcommon.h  gvhuffman.h
gvideo/: GVideo.cpp  Makefile.am  Makefile.in
gvideo-gtk/: GVideo.cpp  Makefile.am  Makefile.in  gv_gtk_controls_widget.cpp  gv_gtk_controls_widget.hpp  gv_gtk_pan-tilt_widget.cpp  gv_gtk_pan-tilt_widget.h  gv_gtk_window.cpp  gv_gtk_window.h  gv_video_threads.cpp  gv_video_threads.h
gvideo-gtk/.deps/: GVid_buff.Po  GVid_color_convert.Po  GVid_image.Po  GVid_mjpg_dec.Po  GVid_options.Po  GVid_sdl_render.Po  GVid_time.Po  GVid_v4l2.Po  GVid_v4l2.Tpo  GVid_v4l2_formats.Po  GVideo.Po
gvideo-qt/: GVideo.cpp  Makefile.am  Makefile.in  gv_qt_controls_widget.cpp  gv_qt_controls_widget.hpp  gv_qt_pan-tilt_widget.cpp  gv_qt_pan-tilt_widget.hpp  gv_qt_window.cpp  gv_qt_window.hpp  gv_video_threads.cpp  gv_video_threads.h
gvideo-qt/.deps/: GVideo.Po  gv_gtk_window.Po  gv_qt_window.Po  gv_video_threads.Po  moc_gv_qt_window.Po
libgvaudio/: GVAudio.cpp  GVAudio.cpp~  GVAudio.h  GVAudio.h~  Makefile.am  Makefile.in
libgvencoder/: GVCodec.cpp  GVCodec.h  GVJpeg_encoder.cpp  GVJpeg_encoder.h  GVMatroska.cpp  GVMatroska.h  Makefile.am  Makefile.in
libgvideo/: GVid_buff.cpp  GVid_buff.h  GVid_color_convert.cpp  GVid_color_convert.h  GVid_image.cpp  GVid_image.h  GVid_mjpg_dec.cpp  GVid_mjpg_dec.h  GVid_options.cpp  GVid_options.h  GVid_time.cpp  GVid_time.h  GVid_v4l2.cpp  GVid_v4l2.h  GVid_v4l2_formats.cpp  GVid_v4l2_formats.h  Makefile  Makefile.am  Makefile.in  gvideo.h  huffman.h
libgvideo/.deps/: GVid_buff.Plo  GVid_color_convert.Plo  GVid_image.Plo  GVid_mjpg_dec.Plo  GVid_options.Plo  GVid_time.Plo  GVid_v4l2.Plo  GVid_v4l2_formats.Plo
libgvrender/: GVid_sdl_render.cpp  GVid_sdl_render.h  Makefile.am  Makefile.in  librender.la  render.h
libgvrender/.deps/: GVid_sdl_render.Plo
libgvthreads/: GVThreads.cpp  GVThreads.h  Makefile.am  Makefile.in
pixmaps/: Makefile.am  Makefile.in
pkgconfig/: gvaudio-0.1.pc.in  gvideo-0.1.pc.in  gvrender-0.1.pc.in
po/: Makefile.in  POTFILES  cs.gmo  da.gmo  de.gmo  es.gmo  eu.gmo  fr.gmo  he.gmo  ja.gmo  nl.gmo  pt.gmo  pt.po  pt_BR.gmo  ru.gmo  tr.gmo
