## Process this file with automake to produce Makefile.in

h_sources = gvcommon.h
cpp_sources =

#Install the headers in a versioned directory - gvideo-0.1/librender:
library_includedir=$(includedir)/$(PACKAGE)-$(PACKAGE_RELEASE)
library_include_HEADERS = $(h_sources)

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/common


